--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <nav class="nav-items">
       <ul>
-        <li class="active-nav-item">Профиль</li>
-        <!-- <li>О нас</li> -->
+        <li class="active-nav-item">Задачи</li>
+        <li> <a href="{{ url_for('aboutus') }}">О нас</a></li>
         <!-- <li>Контакты</li> -->
         <!-- <li>Поддержка</li> -->
         <li class="logout-btn"><a href="{{ url_for('logout') }}">Выйти</a></li>
