--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,9 +15,7 @@
         <link rel="icon" href="../static/images/logo.png" type="image/x-icon">
     </head>
     <body>
-        <header class="header">
-            RatingHabits
-        </header>
+
 
         <div class="auth-container">
             <div class="auth-card">
@@ -29,26 +27,32 @@
 
                 <form method="POST" action="{{ url_for('login') }}">
                     <div class="form-group">
-                        <label class="form-label" for="username">Имя пользователя или Email</label>
-                        <input
+                        <div class="floating-input">
+                            <input
                             type="text"
                             id="username"
                             name="username"
                             class="form-input"
+                            placeholder=" "
                             required
                             autofocus
-                        />
+                            />
+                            <label for="username" class="floating-label">Имя пользователя или Email</label>
+                        </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="form-label" for="password">Пароль</label>
-                        <input
+                        <div class="floating-input">
+                            <input
                             type="password"
                             id="password"
                             name="password"
                             class="form-input"
+                            placeholder=" "
                             required
-                        />
+                            />
+                            <label for="password" class="floating-label">Пароль</label>
+                        </div>
                     </div>
 
                     <button type="submit" class="auth-btn">Войти</button>
