--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
         />
         <link rel="icon" href="../static/images/logo.png" type="image/x-icon">
     </head>
-    <body>
+    <body class="new_back">
 
 
         <div class="auth-container">
