--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <nav class="nav-items">
       <ul>
-        <li class="active-nav-item">Главная</li>
+        <a href="#"><li class="active-nav-item">Главная</li></a>
         <a href="{{ url_for('aboutus') }}"><li>О нас</li></a>
         <a href="{{ url_for('rating') }}"><li>Рейтинг</li></a>
         <!-- <li>Контакты</li> -->
