--- a/app/templates/rating.html
+++ b/app/templates/rating.html
@@ -14,7 +14,7 @@
       <ul>
         <a href="{{ url_for('index') }}"><li>Главная</li></a>
         <a href="{{ url_for('aboutus') }}"><li>О нас</li></a>
-        <li class="active-nav-item">Рейтинг</li>
+        <a href="#"><li class="active-nav-item">Рейтинг</li></a>
         <!-- <li>Контакты</li> -->
         <!-- <li>Поддержка</li> -->
         <li class="logout-btn"><a href="{{ url_for('logout') }}">Выйти</a></li>
